samples/_failures_safe/1761592973_32dadf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9184ff7.c: In function ‘queue_dequeue’:
./samples/SAFE/__tmp_a9184ff7.c:182:5: error: expected identifier at end of input
  182 |     if (!queue->
      |     ^~
./samples/SAFE/__tmp_a9184ff7.c:182:5: error: expected declaration or statement at end of input
